feat: implement user searching
- add REST endpoint and application logic for user searching
- merge liquibase migrations
- update OpenApi specs
